--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
-    "mysql": "^2.18.1",
+    "mssql": "^10.0.2",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
   }
