--- a/Server/package.json
+++ b/Server/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "latest-version": "^9.0.0",
     "mongoose": "^8.1.3",
     "mssql": "^10.0.2",
     "nodemon": "^3.0.3",
